# LunaAG-Patch

./: .gitignore  CMakeLists.txt  LunaAG-Patch.ini  README.md  build.bat
.github/workflows/: cmake-single-platform.yml
src/: common.cpp  config_redirect.cpp  dllmain.cpp  dns_getproc_hooks.cpp  il2cpp_ui.cpp  module_patch.cpp  patch_internal.hpp  state.cpp  winhttp_hooks.cpp
